--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -25,7 +25,7 @@ jobs:
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-            dist/github-snake-myperson.svg?palette=github-dark&color_snake=#BE00FE&color_dots=#196127,#219A3A,#30C44A,#39D353,#45ED58
+            dist/github-snake-myperson.svg?palette=github-dark&color_snake=#BE00FE&color_dots=#00ff1d,#1ea62d,#237a2d,#2b6331,#595959
           
       - name: push github-contribution-grid-snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
