--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -25,7 +25,7 @@ jobs:
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-            dist/github-snake-myperson.svg?palette=github-dark&color_snake=#BE00FE&color_dots=#00FF00,#33cc33,#29a329,#248f24,#1d751d
+            dist/github-snake-myperson.svg?palette=github-dark&color_snake=#BE00FE&color_dots=#006E00,#00A800,#00C500,#00DD00,#00FF00
           
       - name: push github-contribution-grid-snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
